docs/api/qiskit/0.37/qiskit.circuit.library.DraperQFTAdder.mdx
---
title: DraperQFTAdder
description: API reference for qiskit.circuit.library.DraperQFTAdder
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.DraperQFTAdder
---

# DraperQFTAdder

<Class id="qiskit.circuit.library.DraperQFTAdder" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/circuit/library/arithmetic/adders/draper_qft_adder.py" signature="DraperQFTAdder(num_state_qubits, kind='fixed', name='DraperQFTAdder')">
  Bases: `qiskit.circuit.library.arithmetic.adders.adder.Adder`

  A circuit that uses QFT to perform in-place addition on two qubit registers.

  For registers with $n$ qubits, the QFT adder can perform addition modulo $2^n$ (with `kind="fixed"`) or ordinary addition by adding a carry qubits (with `kind="half"`).

  As an example, a non-fixed\_point QFT adder circuit that performs addition on two 2-qubit sized registers is as follows:

  ```python
   a_0:   ─────────■──────■────────────────────────■────────────────
                   │      │                        │
   a_1:   ─────────┼──────┼────────■──────■────────┼────────────────
          ┌──────┐ │P(π)  │        │      │        │       ┌───────┐
   b_0:   ┤0     ├─■──────┼────────┼──────┼────────┼───────┤0      ├
          │      │        │P(π/2)  │P(π)  │        │       │       │
   b_1:   ┤1 qft ├────────■────────■──────┼────────┼───────┤1 iqft ├
          │      │                        │P(π/2)  │P(π/4) │       │
  cout_0: ┤2     ├────────────────────────■────────■───────┤2      ├
          └──────┘                                         └───────┘
  ```

  **References:**

  \[1] T. G. Draper, Addition on a Quantum Computer, 2000. [arXiv:quant-ph/0008033](https://arxiv.org/pdf/quant-ph/0008033.pdf)

  \[2] Ruiz-Perez et al., Quantum arithmetic with the Quantum Fourier Transform, 2017. [arXiv:1411.5949](https://arxiv.org/pdf/1411.5949.pdf)

  \[3] Vedral et al., Quantum Networks for Elementary Arithmetic Operations, 1995. [arXiv:quant-ph/9511018](https://arxiv.org/pdf/quant-ph/9511018.pdf)

  **Parameters**

  *   **num\_state\_qubits** (`int`) – The number of qubits in either input register for state $|a\rangle$ or $|b\rangle$. The two input registers must have the same number of qubits.
  *   **kind** (`str`) – The kind of adder, can be `'half'` for a half adder or `'fixed'` for a fixed-sized adder. A half adder contains a carry-out to represent the most-significant bit, but the fixed-sized adder doesn’t and hence performs addition modulo `2 ** num_state_qubits`.
  *   **name** (`str`) – The name of the circuit object.

  **Raises**

  **ValueError** – If `num_state_qubits` is lower than 1.

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.

    **Return type**

    `List`\[[`AncillaQubit`](qiskit.circuit.AncillaQubit "qiskit.circuit.quantumregister.AncillaQubit")]
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.calibrations" name="calibrations">
    Return calibration dictionary.

    **The custom pulse definition of a given gate is of the form**

    \{‘gate\_name’: \{(qubits, params): schedule}}

    **Return type**

    `dict`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.data" name="data">
    Return the circuit data (instructions and context).

    **Returns**

    a list-like object containing the [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.CircuitInstruction")s for each instruction.

    **Return type**

    QuantumCircuitData
  </Attribute>

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### global\_phase

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.

    **Return type**

    `Union`\[[`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression"), `float`]
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### instances

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.instances" name="instances" attributeValue="= 87" />

  ### metadata

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.metadata" name="metadata">
    The user provided metadata associated with the circuit

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.

    **Return type**

    `dict`
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.

    **Return type**

    `int`
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.num_clbits" name="num_clbits">
    Return number of classical bits.

    **Return type**

    `int`
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.num_parameters" name="num_parameters">
    The number of parameter objects in the circuit.

    **Return type**

    `int`
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.num_qubits" name="num_qubits">
    Return number of qubits.

    **Return type**

    `int`
  </Attribute>

  ### num\_state\_qubits

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.num_state_qubits" name="num_state_qubits">
    The number of state qubits, i.e. the number of bits in each input register.

    **Return type**

    `int`

    **Returns**

    The number of state qubits.
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.op_start_times" name="op_start_times">
    Return a list of operation start times.

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Return type**

    `List`\[`int`]

    **Returns**

    List of integers representing instruction start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    **AttributeError** – When circuit is not scheduled.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.parameters" name="parameters">
    The parameters defined in the circuit.

    This attribute returns the [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit sorted alphabetically. Note that parameters instantiated with a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") are still sorted numerically.

    **Examples**

    The snippet below shows that insertion order of parameters does not matter.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> a, b, elephant = Parameter("a"), Parameter("b"), Parameter("elephant")
    >>> circuit = QuantumCircuit(1)
    >>> circuit.rx(b, 0)
    >>> circuit.rz(elephant, 0)
    >>> circuit.ry(a, 0)
    >>> circuit.parameters  # sorted alphabetically!
    ParameterView([Parameter(a), Parameter(b), Parameter(elephant)])
    ```

    Bear in mind that alphabetical sorting might be unituitive when it comes to numbers. The literal “10” comes before “2” in strict alphabetical sorting.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> angles = [Parameter("angle_1"), Parameter("angle_2"), Parameter("angle_10")]
    >>> circuit = QuantumCircuit(1)
    >>> circuit.u(*angles, 0)
    >>> circuit.draw()
       ┌─────────────────────────────┐
    q: ┤ U(angle_1,angle_2,angle_10) ├
       └─────────────────────────────┘
    >>> circuit.parameters
    ParameterView([Parameter(angle_1), Parameter(angle_10), Parameter(angle_2)])
    ```

    To respect numerical sorting, a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") can be used.

    ```python
    ```

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter, ParameterVector
    >>> x = ParameterVector("x", 12)
    >>> circuit = QuantumCircuit(1)
    >>> for x_i in x:
    ...     circuit.rx(x_i, 0)
    >>> circuit.parameters
    ParameterView([
        ParameterVectorElement(x[0]), ParameterVectorElement(x[1]),
        ParameterVectorElement(x[2]), ParameterVectorElement(x[3]),
        ..., ParameterVectorElement(x[11])
    ])
    ```

    **Return type**

    `ParameterView`

    **Returns**

    The sorted [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qubits

  <Attribute id="qiskit.circuit.library.DraperQFTAdder.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.

    **Return type**

    `List`\[[`Qubit`](qiskit.circuit.Qubit "qiskit.circuit.quantumregister.Qubit")]
  </Attribute>
</Class>

